# meta-project-2026

./: .dockerignore  .gitignore  DEPLOYMENT_INSTRUCTIONS.md  DEPLOY_NOW.md  DEPLOY_WITH_TOKEN.md  Dockerfile  FIXES_SUMMARY.md  HUGGINGFACE_SPACE_STATUS.md  PHASE1_FIX_SUMMARY.md  QUICK_START.md  README.md  TROUBLESHOOTING_HF.md  VALIDATION_REPORT.md  VALIDATION_SUCCESS.md  baseline.py  client.py  deploy_to_huggingface.bat  deploy_with_token.bat  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  run_tests.bat  test_api_endpoints.py  validate.bat
.hypothesis/constants/: 004e722d2b39195a  02fb3c1b426206d7  03a0bc33c3be41ac  041b82baf95116f0  0570a7c52cd987f9  0628f2618034526e  068c9e16d4886008  0736e2d4acddd01a  07475514dc0bbadb  07b8446a052edf99  08f76577cc30f502  09ae28b390a241d0  0a9221d4acddedf2  0cfa12dfbf9e9abb  0d65a410db824952  110a1d1d892c7388  11a4fb9bf042a054  131e9a8c12e60b9f  13efa0910df75e7a  146ce438f76c65d3  14ce7443b3faf241  15f1b6a27c65c79e  1711dca7bbb78b0f  173763bf5492a7c9  17cef3316ed218df  17e3f8cea4119fc7  18baa06439e76d96  1a5326b88fdd03ad  1b03421aacbc7cd8  1c8ad82ba7015765  1cce0c53a0aa1633  1dc359315dc82348  1f4b62403fde35c2  1ff82dc6c6014893  20655b28e90587ea  219385b4acf67710  2196e604560785f8  22aee50d81961c02  23de3c8efc283fa6  2438213548c974ab  (+183 more)
.hypothesis/tmp/: tmp8qxjyhox  tmpa0e2mzb9  tmpg5ml1usx  tmpns8o3kc7  tmpxhv810bh  tmpyqy3zl2a  tmpyrczxs0_
fixtures/: categorize_easy.json  manage_hard.json  triage_medium.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
openenv_email_triage/: __init__.py  api.py  env.py  fixture_loader.py  graders.py  models.py  reward_calculator.py
server/: app.py
static/: index.html
static/assets/: index-05xrpYt4.js  index-BZpvYVBQ.css  index-D5q373tE.js  index-qNP3QoUn.css
tests/property/: test_action_validation.py  test_categorize_grader.py  test_env_invariants.py  (+2 more)
(+27 files in other folders)
